commiting .py file, updated notebook file and two pickle files

--- a/cltk tagger benchmark.ipynb
+++ b/cltk tagger benchmark.ipynb
@@ -197,10 +197,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3842\n",
+      "[('Omnis', 'a-p---ma-'), ('homines', 'n-p---ma-'), ('qui', 'p-p---mn-'), ('sese', 'p-p---ma-'), ('student', 'v3ppia---'), ('praestare', 'v--pna---'), ('ceteris', 'a-p---nd-'), ('animalibus', 'n-p---nd-'), ('summa', 'a-s---fb-'), ('ope', 'n-s---fb-'), ('niti', 'v--pnp---'), ('decet', 'v3spia---'), ('ne', 'c--------'), ('vitam', 'n-s---fa-'), ('silentio', 'n-s---nb-'), ('transeant', 'v3ppsa---'), ('veluti', 'd--------'), ('pecora', 'n-p---nn-'), ('quae', 'p-p---na-'), ('natura', 'n-s---fn-'), ('prona', 'a-p---na-'), ('atque', 'c--------'), ('ventri', 'n-s---md-'), ('oboedientia', 'v-pppana-'), ('finxit', 'v3sria---')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(word_list))\n",
+    "print(word_list[0])"
+   ]
   },
   {
    "cell_type": "code",
